Added back in matlab example simulations

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -3460,6 +3460,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if (rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_summaries.gzip').exists():\n",
+    "    fig_zinani_matlab_df = pd.read_parquet(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_summaries.gzip', 'fig_zinani'))\n",
+    "    print(f'Loaded {len(fig_zinani_matlab_df)} MATLAB simulation runs from Parquet cached file')\n",
+    "    # Load matlab simulations\n",
+    "else:\n",
+    "    print(f'Loading Matlab simulations...')\n",
+    "    fig_zinani_matlab_df = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'zinani_matlab.csv', 'fig_zinani'))\n",
+    "    fig_zinani_matlab_df['time'] = fig_zinani_matlab_df['time_min'] * 60.0\n",
+    "    tangles_signal_length = len(fig_zinani_topo_examples[fig_zinani_topo_examples.time > 2000].time.unique())\n",
+    "    matlab_signal_length = len(fig_zinani_matlab_df[(fig_zinani_matlab_df.idx == 1) & (fig_zinani_matlab_df.condition == 'Paired')])\n",
+    "    tangles_lags = scipy.signal.correlation_lags(tangles_signal_length, tangles_signal_length) * np.diff(fig_zinani_topo_examples.time.unique())[0]\n",
+    "    matlab_lags = scipy.signal.correlation_lags(matlab_signal_length,matlab_signal_length) * np.diff(fig_zinani_matlab_df[fig_zinani_matlab_df.idx == 1].time.unique())[0]\n",
+    "    # Split each dataframe by signal length\n",
+    "    for n in range(int(len(fig_zinani_matlab_df) / matlab_signal_length)):\n",
+    "        run_df = fig_zinani_matlab_df.iloc[(n*matlab_signal_length):((n+1)*matlab_signal_length),:]\n",
+    "        her1 = run_df['her1']\n",
+    "        her7 = run_df['her7']\n",
+    "        mc_her1 = her1 - np.mean(her1)\n",
+    "        mc_her7 = her7 - np.mean(her7)\n",
+    "        sc, _ = scipy.stats.spearmanr(her1, her7)\n",
+    "        cross_corr = scipy.signal.correlate(mc_her1, mc_her7)\n",
+    "        autocorr_correction = np.sqrt(\n",
+    "            scipy.signal.correlate(mc_her1, mc_her1, mode='valid')[0] * \n",
+    "            scipy.signal.correlate(mc_her7, mc_her7, mode='valid')[0])\n",
+    "        # Resample cross correlation to the same timescale\n",
+    "        resample_cross_corr = np.interp(tangles_lags, matlab_lags, cross_corr)\n",
+    "        fig_zinani_matlab_df.append(pd.DataFrame(data={\n",
+    "            'spearman_corr': sc,\n",
+    "            'cross_corr': (resample_cross_corr,),\n",
+    "            'autocorr_correction': autocorr_correction,\n",
+    "            'condition': 'matlab.' + run_df['condition'].iloc[0],\n",
+    "            'idx': i\n",
+    "        }))\n",
+    "        i += 1\n",
+    "    fig_zinani_matlab_df = pd.concat(fig_zinani_matlab_df, ignore_index=True)\n",
+    "    print(f'Loaded {len(fig_zinani_matlab_df)} total simulations!')\n",
+    "    fig_zinani_matlab_df.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_summaries.gzip', 'fig_zinani_cache'), compression='gzip')\n",
+    "if (rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_examples.gzip').exists():\n",
+    "    fig_zinani_matlab_examples = pd.read_parquet(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_examples.gzip', 'fig_zinani'))\n",
+    "    print(f'Loaded {len(fig_zinani_matlab_examples)} total example datapoints from Parquet cached file')\n",
+    "else:\n",
+    "    print(f'Loading Matlab examples...')\n",
+    "    fig_zinani_matlab_examples = []\n",
+    "    fig_zinani_matlab_df = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'zinani_matlab.csv', 'fig_zinani_cache'))\n",
+    "    fig_zinani_matlab_df['time'] = fig_zinani_matlab_df['time_min'] * 60.0\n",
+    "    matlab_signal_length = len(fig_zinani_matlab_df[(fig_zinani_matlab_df.idx == 1) & (fig_zinani_matlab_df.condition == 'Paired')])\n",
+    "    example_counts = {'Paired': 0, 'Unpaired': 0}\n",
+    "    for n in range(int(len(fig_zinani_matlab_df) / matlab_signal_length)):\n",
+    "        run_df = fig_zinani_matlab_df.iloc[(n*matlab_signal_length):((n+1)*matlab_signal_length),:]\n",
+    "        time = run_df['time']\n",
+    "        her1 = run_df['her1']\n",
+    "        her7 = run_df['her7']\n",
+    "        condition = run_df['condition'].iloc[0]\n",
+    "        if example_counts[condition] < 5:\n",
+    "            fig_zinani_matlab_examples.append(pd.DataFrame({\n",
+    "                'time': time,\n",
+    "                'her1': her1,\n",
+    "                'her7': her7,\n",
+    "                'condition': f'matlab.{condition}',\n",
+    "                'idx': example_counts[condition]\n",
+    "            }))\n",
+    "            example_counts[condition] += 1\n",
+    "        if example_counts['Paired'] > 5 and example_counts['Unpaired'] > 5:\n",
+    "            break\n",
+    "\n",
+    "    fig_zinani_matlab_examples = pd.concat(fig_zinani_matlab_examples)\n",
+    "    print(f'Loaded {len(fig_zinani_matlab_examples)} example datapoints!')\n",
+    "    fig_zinani_matlab_examples.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_examples.gzip', 'fig_zinani_cache'), compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_zinani_matlab_palette = {\n",
+    "    'her1': '#5254a3',\n",
+    "    'her7': '#9c9ede',\n",
+    "    'matlab.Unpaired': '#AAAAAA',\n",
+    "    'matlab.Paired': main_palette['gray'],\n",
+    "    'gray': main_palette['gray'],\n",
+    "    'background_gray': '#DDDDDD'\n",
+    "    }\n",
     "# Create the overall figure, gridspec, and add subfigure labels.\n",
     "fig_supp_orig_zinani = plt.figure(figsize=(5.2,3.12))\n",
     "fig_supp_orig_zinani_gridspec = gridspec.GridSpec(2, 2, figure=fig_supp_orig_zinani,\n",
@@ -3501,9 +3585,9 @@
     "# Plot correlation coefficents\n",
     "fig_supp_orig_zinani_subfigures['B'].subplots_adjust(left=0.25, bottom=0.23, right=0.95, top=0.9)\n",
     "fig_supp_orig_zinani_cc_ax = fig_supp_orig_zinani_subfigures['B'].subplots(ncols=1)\n",
-    "sns.violinplot(data=fig_zinani_df[\n",
-    "    (fig_zinani_df.condition == 'matlab.Unpaired') |\n",
-    "    (fig_zinani_df.condition == 'matlab.Paired')\n",
+    "sns.violinplot(data=fig_zinani_matlab_df[\n",
+    "    (fig_zinani_matlab_df.condition == 'matlab.Unpaired') |\n",
+    "    (fig_zinani_matlab_df.condition == 'matlab.Paired')\n",
     "],\n",
     "    x='condition', y='spearman_corr', inner='quartile',\n",
     "    order=['matlab.Unpaired', 'matlab.Paired'],\n",
