--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -3466,15 +3466,16 @@
     "    # Load matlab simulations\n",
     "else:\n",
     "    print(f'Loading Matlab simulations...')\n",
-    "    fig_zinani_matlab_df = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'zinani_matlab.csv', 'fig_zinani'))\n",
-    "    fig_zinani_matlab_df['time'] = fig_zinani_matlab_df['time_min'] * 60.0\n",
+    "    raw_zinani_matlab_df = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'zinani_matlab.csv', 'fig_zinani'))\n",
+    "    raw_zinani_matlab_df['time'] = raw_zinani_matlab_df['time_min'] * 60.0\n",
     "    tangles_signal_length = len(fig_zinani_topo_examples[fig_zinani_topo_examples.time > 2000].time.unique())\n",
-    "    matlab_signal_length = len(fig_zinani_matlab_df[(fig_zinani_matlab_df.idx == 1) & (fig_zinani_matlab_df.condition == 'Paired')])\n",
+    "    matlab_signal_length = len(raw_zinani_matlab_df[(raw_zinani_matlab_df.idx == 1) & (raw_zinani_matlab_df.condition == 'Paired')])\n",
     "    tangles_lags = scipy.signal.correlation_lags(tangles_signal_length, tangles_signal_length) * np.diff(fig_zinani_topo_examples.time.unique())[0]\n",
-    "    matlab_lags = scipy.signal.correlation_lags(matlab_signal_length,matlab_signal_length) * np.diff(fig_zinani_matlab_df[fig_zinani_matlab_df.idx == 1].time.unique())[0]\n",
+    "    matlab_lags = scipy.signal.correlation_lags(matlab_signal_length,matlab_signal_length) * np.diff(raw_zinani_matlab_df[raw_zinani_matlab_df.idx == 1].time.unique())[0]\n",
     "    # Split each dataframe by signal length\n",
-    "    for n in range(int(len(fig_zinani_matlab_df) / matlab_signal_length)):\n",
-    "        run_df = fig_zinani_matlab_df.iloc[(n*matlab_signal_length):((n+1)*matlab_signal_length),:]\n",
+    "    fig_zinani_matlab_df = []\n",
+    "    for n in range(int(len(raw_zinani_matlab_df) / matlab_signal_length)):\n",
+    "        run_df = raw_zinani_matlab_df.iloc[(n*matlab_signal_length):((n+1)*matlab_signal_length),:]\n",
     "        her1 = run_df['her1']\n",
     "        her7 = run_df['her7']\n",
     "        mc_her1 = her1 - np.mean(her1)\n",
@@ -3494,6 +3495,8 @@
     "            'idx': i\n",
     "        }))\n",
     "        i += 1\n",
+    "        if n % 10 == 0:\n",
+    "            print('.', end='', flush=True)\n",
     "    fig_zinani_matlab_df = pd.concat(fig_zinani_matlab_df, ignore_index=True)\n",
     "    print(f'Loaded {len(fig_zinani_matlab_df)} total simulations!')\n",
     "    fig_zinani_matlab_df.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_summaries.gzip', 'fig_zinani_cache'), compression='gzip')\n",
@@ -3527,7 +3530,13 @@
     "\n",
     "    fig_zinani_matlab_examples = pd.concat(fig_zinani_matlab_examples)\n",
     "    print(f'Loaded {len(fig_zinani_matlab_examples)} example datapoints!')\n",
-    "    fig_zinani_matlab_examples.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_examples.gzip', 'fig_zinani_cache'), compression='gzip')"
+    "    fig_zinani_matlab_examples.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_examples.gzip', 'fig_zinani_cache'), compression='gzip')\n",
+    "matlab_crosscorr = fig_zinani_matlab_df.groupby(['condition'], dropna=False).apply(lambda df:np.vstack(df.cross_corr / df.autocorr_correction).mean(axis=0)).reset_index()\n",
+    "matlab_crosscorr.insert(2, 'time_delay', 2 * [scipy.signal.correlation_lags(tangles_topo_signal_length, tangles_topo_signal_length) * np.diff(fig_zinani_topo_examples.time.unique())[0]])\n",
+    "matlab_crosscorr = matlab_crosscorr.rename(columns={0:'cross_correlation'})\n",
+    "matlab_crosscorr = matlab_crosscorr.explode(['time_delay', 'cross_correlation'])\n",
+    "# Strip croscorr from fig_zinani_matlab_df\n",
+    "fig_zinani_matlab_df = fig_zinani_matlab_df.drop('cross_corr', axis=1)"
    ]
   },
   {
@@ -3569,15 +3578,15 @@
     "for ax, condition in zip(fig_supp_orig_zinani_mRNA_axes, ['matlab.Unpaired', 'matlab.Paired']):\n",
     "    df = fig_zinani_matlab_examples[fig_zinani_matlab_examples.condition == condition]\n",
     "    idx = df.idx.unique()[1]\n",
-    "    sns.lineplot(data=df[df.idx == idx], x='time', y='her1', ax=ax, color=fig_zinani_palette['her1'])\n",
-    "    sns.lineplot(data=df[df.idx == idx], x='time', y='her7', ax=ax, color=fig_zinani_palette['her7'])\n",
+    "    sns.lineplot(data=df[df.idx == idx], x='time', y='her1', ax=ax, color=fig_zinani_matlab_palette['her1'])\n",
+    "    sns.lineplot(data=df[df.idx == idx], x='time', y='her7', ax=ax, color=fig_zinani_matlab_palette['her7'])\n",
     "    sns.despine(ax=ax)\n",
     "    ax.set_xlim([0, 15000])\n",
     "    ax.set_xticks([0, 3600 * 2, 3600 * 4])\n",
     "    ax.xaxis.set_major_formatter(hours_1f_formatter)\n",
     "    ax.set_xlabel('')\n",
     "    ax.set_ylabel('')\n",
-    "    ax.set_facecolor(fig_zinani_palette[condition] + '55')\n",
+    "    ax.set_facecolor(fig_zinani_matlab_palette[condition] + '55')\n",
     "fig_supp_orig_zinani_mRNA_axes[0].set_ylabel('mRNA counts')\n",
     "fig_supp_orig_zinani_mRNA_axes[1].set_xlabel('Time (hr)')\n",
     "fig_supp_orig_zinani_mRNA_axes[0].text(x=0.5, y=1.07, s='Uncoupled\\n(Zinani MATLAB)', horizontalalignment='center', transform=fig_supp_orig_zinani_mRNA_axes[0].transAxes)\n",
@@ -3591,7 +3600,7 @@
     "],\n",
     "    x='condition', y='spearman_corr', inner='quartile',\n",
     "    order=['matlab.Unpaired', 'matlab.Paired'],\n",
-    "    palette=fig_zinani_palette, saturation=0.7,\n",
+    "    palette=fig_zinani_matlab_palette, saturation=0.7,\n",
     "    bw=0.1, ax=fig_supp_orig_zinani_cc_ax)\n",
     "fig_supp_orig_zinani_cc_ax.set_xlabel('')\n",
     "fig_supp_orig_zinani_cc_ax.set_ylabel('Correlation\\ncoefficient')\n",
@@ -3601,8 +3610,12 @@
     "fig_supp_orig_zinani_subfigures['C'].subplots_adjust(left=0.2, bottom=0.25, right=0.95, top=0.9)\n",
     "fig_supp_orig_zinani_crosscorr_ax = fig_supp_orig_zinani_subfigures['C'].subplots(ncols=1)\n",
     "for condition in ['matlab.Unpaired', 'matlab.Paired']:\n",
-    "    sns.lineplot(data=fig_zinani_crosscorr[fig_zinani_crosscorr.condition == condition], x='time_delay', y='cross_correlation',\n",
-    "        hue='condition', palette=fig_zinani_palette, ax=fig_supp_orig_zinani_crosscorr_ax, estimator=None, legend=None)\n",
+    "    fig_supp_orig_zinani_crosscorr_ax.plot(\n",
+    "        matlab_crosscorr[matlab_crosscorr.condition == condition].time_delay,\n",
+    "        matlab_crosscorr[matlab_crosscorr.condition == condition].cross_correlation,\n",
+    "        color=fig_zinani_matlab_palette[condition])\n",
+    "    #sns.lineplot(data=matlab_crosscorr[matlab_crosscorr.condition == condition], x='time_delay', y='cross_correlation',\n",
+    "    #    hue='condition', palette=fig_zinani_matlab_palette, ax=fig_supp_orig_zinani_crosscorr_ax, estimator=None, legend=None)\n",
     "sns.despine(ax=fig_supp_orig_zinani_crosscorr_ax)\n",
     "fig_supp_orig_zinani_crosscorr_ax.set_xlim([-4000,4000])\n",
     "fig_supp_orig_zinani_crosscorr_ax.set_xticks(np.linspace(-3600,3600, 5))\n",
