Updated video and image notebooks

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -4006,7 +4006,8 @@
     "fig_supp_orig_zinani_crosscorr_ax.axhline(y=0, color='k')\n",
     "fig_supp_orig_zinani_crosscorr_ax.axvline(x=0, color='#888888', linestyle=':')\n",
     "fig_supp_orig_zinani.savefig('test.svg')\n",
-    "fig_supp_orig_zinani.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/'fig_supp_orig_zinani.svg', 'fig_zinani'))"
+    "fig_supp_orig_zinani.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/'fig_supp_orig_zinani.svg', 'fig_zinani'))\n",
+    "fig_supp_orig_zinani.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/'fig_supp_orig_zinani.pdf', 'fig_zinani'))"
    ]
   },
   {
