--- a/notebooks/seminar_figures.ipynb
+++ b/notebooks/seminar_figures.ipynb
@@ -928,11 +928,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "393577709b641b15c2aa1de8cfe0868d00094c5de3ea5b0856cceab616d9a2d4"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.4 ('env': venv)",
+   "display_name": "Python 3.9.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -946,7 +943,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
+   }
   }
  },
  "nbformat": 4,
