--- a/notebooks/short_movies.ipynb
+++ b/notebooks/short_movies.ipynb
@@ -236,17 +236,14 @@
     "    rd.outfile(rd.rootdir/'output'/'short_tandem_downstream.mp4'), 25*30, tspan=[0,3600*8])\n",
     "gen_animation(movie_examples['tangles_full_run.000025'], [main_palette['gray'], main_palette['convergent']], 'Convergent syntax', 'either-or bursting',\n",
     "    rd.outfile(rd.rootdir/'output'/'short_convergent.mp4'), 25*30, tspan=[0,3600*8])\n",
-    "gen_animation(movie_examples['tangles_full_run.000027'], [main_palette['gray'], main_palette['divergent']], 'Divergent syntax', 'coordinated busrting',\n",
+    "gen_animation(movie_examples['tangles_full_run.000027'], [main_palette['gray'], main_palette['divergent']], 'Divergent syntax', 'coordinated bursting',\n",
     "    rd.outfile(rd.rootdir/'output'/'short_divergent.mp4'), 25*30, tspan=[0,3600*8])"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "633f1c1c8320b313f5f886b41bd1fdc446650904a8aae9c7ea4880a02892af16"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.4 ('env': venv)",
+   "display_name": "Python 3.9.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +257,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
+   }
   }
  },
  "nbformat": 4,
