Fixed generation name for perturb and high alpha induction

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -2593,7 +2593,8 @@
     "reporter_high_alpha_supp_fig.text(0.65, 0.84,  'Induced', ha='left', va='center')\n",
     "reporter_high_alpha_supp_fig.text(0.55, 0.95,  'α=0.03, 1.8x induction', ha='center', va='center')\n",
     "reporter_high_alpha_supp_fig.savefig('test.svg')\n",
-    "reporter_high_alpha_supp_fig.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/'fig_supp_sc_reporter_output_high_alpha_induction.svg', 'fig_single_cell_behavior'))"
+    "reporter_high_alpha_supp_fig.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/'fig_supp_sc_reporter_output_high_alpha_induction.svg', 'fig_single_cell_behavior'))\n",
+    "reporter_high_alpha_supp_fig.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/'fig_supp_sc_reporter_output_high_alpha_induction.pdf', 'fig_single_cell_behavior'))"
    ]
   },
   {
@@ -4256,7 +4257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for torque_type, rnap_type, basename in zip(['none', 'positive_buffer'], ['energy_well', 'none'], ['fig_supp_zinani_energy_well', 'fig_supp_zinani_nucleosomes']):\n",
+    "for torque_type, rnap_type, basename in zip(['none', 'positive_buffer'], ['energy_well', 'none'], ['fig_supp_perturb_energy_well', 'fig_supp_perturb_nucleosomes']):\n",
     "    plot_alpha = 0.025\n",
     "    # Create the overall figure, gridspec, and add subfigure labels.\n",
     "    fig_zinani_perturb = plt.figure(figsize=(6,8.0))\n",
