Make toggles KDEplots smoother

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -2936,7 +2936,7 @@
     "    # Count the amount of mRNA in each state\n",
     "    mean_state = np.mean(sub_df[f'mRNA_1_at_{t}'] > sub_df[f'mRNA_2_at_{t}'])\n",
     "    sns.kdeplot(data=sub_df,x=f'mRNA_1_at_{t}', y=f'mRNA_2_at_{t}', cmap=custom_cmap_from_base(fig_toggles_palette[cond], (1.1, 0.8), (0.9, 1.4)),\n",
-    "        cut=0, clip=[0,40],fill=True, levels=30, ax=ax)\n",
+    "        cut=0, clip=[0,40],fill=True, levels=30, ax=ax, bw_adjust=1.8)\n",
     "    ax.axline((0,0), slope=1, linestyle=':', color=main_palette['gray'])\n",
     "    sns.despine(ax=ax)\n",
     "    ax.set_aspect('equal')\n",
