Tweaks to delta spacing figure

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -950,7 +950,6 @@
     "fig_bm_subfigures['F'].subplots_adjust(left=0.1, bottom=0.35, right=0.85, top=0.75)\n",
     "fig_bm_spacing_axes = fig_bm_subfigures['F'].subplots(ncols=4, sharey=True)\n",
     "for condition, ax in zip(['fig.bm.spacing.convergent', 'fig.bm.spacing.divergent', 'fig.bm.spacing.tandem_reporter_upstream', 'fig.bm.spacing.tandem_reporter_downstream'], fig_bm_spacing_axes):\n",
-    "    ax.axhline(0, color=fig_bm_palette['gray'], linestyle=':')\n",
     "    sns.lineplot(data=df_bm_spacing[df_bm_spacing['condition']==condition], x='kb_spacing', y='norm_reporter', hue='norm_induction',\n",
     "        palette='coolwarm', hue_norm=matplotlib.colors.Normalize(vmin=0, vmax=2),\n",
     "        legend=False, ax=ax, ci=None)\n",
@@ -959,8 +958,8 @@
     "    ax.set_xscale('log')\n",
     "    ax.set_xlabel('')\n",
     "    ax.set_xlim([0.5,10])\n",
-    "    #ax.set_yticks([-0.5,-0.25, 0])\n",
-    "    #ax.set_ylim([-0.5,0.07])\n",
+    "    ax.set_yticks([0, 0.5, 1.0])\n",
+    "    ax.set_ylim([-0.05, 1.2])\n",
     "\n",
     "plot_genes_unified(fig_bm_spacing_axes[0], [(0.3, 0.4), (0.7, 0.6)], [fig_bm_palette[c] for c in ['gray', 'fig.bm.convergent']], base_line_extents=(0.1,0.9), plot_dx=(0,1), plot_inducible=0)\n",
     "plot_genes_unified(fig_bm_spacing_axes[1], [(0.4, 0.3), (0.6, 0.7)], [fig_bm_palette[c] for c in ['gray', 'fig.bm.divergent']], base_line_extents=(0.1,0.9), plot_dx=(0,1), plot_inducible=0)\n",
@@ -973,18 +972,9 @@
     "fig_bm_spacing_cbar.set_yticks([0,1,2])\n",
     "fig_bm_spacing_cbar.yaxis.set_major_formatter(fold_formatter)\n",
     "fig_bm_spacing_cbar.set_title('Fold\\ninduction', fontsize=font_sizes['colorbar_title'], loc='left')\n",
-    "fig_bm_spacing_axes[0].set_ylabel('ΔReporter output')\n",
+    "fig_bm_spacing_axes[0].set_ylabel('Reporter output')\n",
     "fig_bm_subfigures['F'].text(0.5, 0.12, 'Inter-gene spacing (kb)', ha='center')\n",
     "fig_bm.savefig('test.svg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig_bm.savefig('spacing_non_delta.pdf')"
    ]
   },
   {
@@ -4831,6 +4821,8 @@
     "                    x='norm_induction', y='constant_mRNA', hue='condition',\n",
     "                    palette=fig_supp_topo_palette, legend=False, linewidth=1, ci=None,\n",
     "                    ax=axes[tr_idx, t_idx * 2 + 1])\n",
+    "        axes[tr_idx, t_idx * 2].text(0.5, 1.0, 'Linear', ha='center', fontsize=font_sizes['data_annotation'], transform=axes[tr_idx, t_idx * 2].transAxes)\n",
+    "        axes[tr_idx, t_idx * 2 + 1].text(0.5, 1.0, 'Circular', ha='center', fontsize=font_sizes['data_annotation'], transform=axes[tr_idx, t_idx * 2 + 1].transAxes)\n",
     "        if t_idx == len(topo_types) - 1:\n",
     "            axes[tr_idx, t_idx * 2 + 1].text(1.15, 0.5, f'{topo_rate * 1200:0.1f}x topo rate', transform=axes[tr_idx, t_idx * 2 + 1].transAxes)\n",
     "for ax in axes.flatten():\n",
