--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -2294,10 +2294,10 @@
     "\n",
     "# Plot regions of change\n",
     "for ax in torque_energy_axes[:,2]:\n",
-    "    ax.axvspan(0,0.031, color='#EEEEEE')\n",
+    "    ax.axvspan(0,0.031, color=fig_bursts_palette['background_gray'])\n",
     "for ax in [torque_energy_axes[1,1]]:\n",
-    "    ax.axvspan(-0.15, -0.06, color='#EEEEEE')\n",
-    "    ax.axvspan(0.125, 0.15, color='#EEEEEE')\n",
+    "    ax.axvspan(-0.15, -0.06, color=fig_bursts_palette['background_gray'])\n",
+    "    ax.axvspan(0.125, 0.15, color=fig_bursts_palette['background_gray'])\n",
     "\n",
     "torque_df = perturbation_energy_df[\n",
     "    (perturbation_energy_df.alpha == 0.0) & (perturbation_energy_df.torque_perturb_type=='original') & (perturbation_energy_df.rnap_perturb=='original')\n",
@@ -5001,7 +5001,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 ('env': venv)",
+   "display_name": "Python 3.9.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -5015,11 +5015,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "393577709b641b15c2aa1de8cfe0868d00094c5de3ea5b0856cceab616d9a2d4"
+    "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
    }
   }
  },
