Updated figures for seminar/talk generation

--- a/notebooks/seminar_figures.ipynb
+++ b/notebooks/seminar_figures.ipynb
@@ -232,16 +232,19 @@
     "    ((bursting_df.induction) == selected_induction[1]) |\n",
     "    ((bursting_df.induction) == selected_induction[2])\n",
     "]\n",
-    "conditions = [f'fig.bm.sc_bursts.{x}' for x in ['convergent', 'divergent']]\n",
+    "conditions = [f'fig.bm.sc_bursts.{x}' for x in ['convergent', 'divergent', 'tandem_reporter_upstream', 'tandem_reporter_downstream']]\n",
     "bm_bursting_df = bursting_df_selected[\n",
     "    (bursting_df_selected.burst_threshold == 30) &\n",
     "    (bursting_df_selected.inter_rnap_gene == 2) &\n",
     "    (bursting_df_selected.burst_size > 0) &\n",
     "    (bursting_df_selected.burst_duration > 0) &\n",
     "    (bursting_df_selected.inter_burst_time > 0) &\n",
+    "    (bursting_df_selected.alpha == 0.025) &\n",
     "    (\n",
     "        ((bursting_df_selected.condition) == conditions[0]) |\n",
-    "        ((bursting_df_selected.condition) == conditions[1])\n",
+    "        ((bursting_df_selected.condition) == conditions[1]) |\n",
+    "        ((bursting_df_selected.condition) == conditions[2]) |\n",
+    "        ((bursting_df_selected.condition) == conditions[3])\n",
     "    )\n",
     "].copy()\n",
     "bm_bursting_df.condition = bm_bursting_df.condition.cat.remove_unused_categories()"
@@ -259,15 +262,15 @@
     "        legend=None, log_scale=True)\n",
     "    plt.text(10, 1.1, \"Reporter only\", color=main_palette['gray'])\n",
     "    if stage >= 2:\n",
-    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.convergent') & (bm_bursting_df.induction == 2.0 / 120.0)], x='burst_size',\n",
+    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.convergent') & (bm_bursting_df.induction == 1.0 / 120.0)], x='burst_size',\n",
     "            common_norm=False, color=main_palette['convergent'], linewidth=3,\n",
     "            legend=None, log_scale=True)\n",
-    "        plt.text(3, 1.5, \"Convergent\", color=main_palette['convergent'])\n",
+    "        plt.text(10, 1.0, \"Convergent\", color=main_palette['convergent'])\n",
     "    if stage >= 3:\n",
-    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.divergent') & (bm_bursting_df.induction == 2.0 / 120.0)], x='burst_size',\n",
+    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.divergent') & (bm_bursting_df.induction == 1.0 / 120.0)], x='burst_size',\n",
     "            common_norm=False, color=main_palette['divergent'], linewidth=3,\n",
     "            legend=None, log_scale=True)\n",
-    "        plt.text(200, 0.55, \"Divergent\", color=main_palette['divergent'])\n",
+    "        plt.text(200, 1.2, \"Divergent\", color=main_palette['divergent'])\n",
     "    plt.xlim([1, 3e3])\n",
     "    plt.ylim([0,1.8])\n",
     "    plt.xlabel('Burst size')\n",
@@ -282,21 +285,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for stage in range(1,4):\n",
+    "for stage in range(1,5):\n",
     "    sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.convergent') & (bm_bursting_df.induction == 0.0)], x='inter_burst_time',\n",
     "        common_norm=False, color=main_palette['gray'], linewidth=3,\n",
     "        legend=None, log_scale=True)\n",
-    "    plt.text(100, 1.1, \"Reporter only\", color=main_palette['gray'])\n",
+    "    plt.text(160, 1.0, \"Reporter only\", color=main_palette['gray'])\n",
     "    if stage >= 2:\n",
-    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.convergent') & (bm_bursting_df.induction == 2.0 / 120.0)], x='inter_burst_time',\n",
+    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.convergent') & (bm_bursting_df.induction == 1.0 / 120.0)], x='inter_burst_time',\n",
     "            common_norm=False, color=main_palette['convergent'], linewidth=3,\n",
     "            legend=None, log_scale=True)\n",
-    "        plt.text(400, 0.5, \"Convergent\", color=main_palette['convergent'])\n",
+    "        plt.text(400, 0.4, \"Convergent\", color=main_palette['convergent'])\n",
     "    if stage >= 3:\n",
-    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.divergent') & (bm_bursting_df.induction == 2.0 / 120.0)], x='inter_burst_time',\n",
+    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.divergent') & (bm_bursting_df.induction == 1.0 / 120.0)], x='inter_burst_time',\n",
     "            common_norm=False, color=main_palette['divergent'], linewidth=3,\n",
     "            legend=None, log_scale=True)\n",
     "        plt.text(30, 1.45, \"Divergent\", color=main_palette['divergent'])\n",
+    "    if stage >= 4:\n",
+    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.tandem_reporter_upstream') & (bm_bursting_df.induction == 1.0 / 120.0)], x='inter_burst_time',\n",
+    "            common_norm=False, color=main_palette['tandem'], linewidth=3,\n",
+    "            legend=None, log_scale=True)\n",
+    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.tandem_reporter_downstream') & (bm_bursting_df.induction == 1.0 / 120.0)], x='inter_burst_time',\n",
+    "            common_norm=False, color=main_palette['tandem_alt'], linewidth=3,\n",
+    "            legend=None, log_scale=True)\n",
+    "        plt.text(30, 1.38, \"Upstream tandem\", color=main_palette['tandem'])\n",
+    "        plt.text(400, 0.8, \"Downstream tandem\", color=main_palette['tandem_alt'])\n",
     "    plt.xlim([15, 5e3])\n",
     "    plt.ylim([0,1.55])\n",
     "    plt.xlabel('Inter-burst time (s)')\n",
@@ -929,7 +941,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('env': venv)",
+   "display_name": "Python 3.7.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -943,11 +955,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
+    "hash": "393577709b641b15c2aa1de8cfe0868d00094c5de3ea5b0856cceab616d9a2d4"
    }
   }
  },
