Updated version of notebooks

--- a/notebooks/seminar_figures.ipynb
+++ b/notebooks/seminar_figures.ipynb
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for stage in range(1,4):\n",
+    "for stage in range(1,5):\n",
     "    sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.convergent') & (bm_bursting_df.induction == 0.0)], x='burst_size',\n",
     "        common_norm=False, color=main_palette['gray'], linewidth=3,\n",
     "        legend=None, log_scale=True)\n",
@@ -271,6 +271,15 @@
     "            common_norm=False, color=main_palette['divergent'], linewidth=3,\n",
     "            legend=None, log_scale=True)\n",
     "        plt.text(200, 1.2, \"Divergent\", color=main_palette['divergent'])\n",
+    "    if stage >= 4:\n",
+    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.tandem_reporter_upstream') & (bm_bursting_df.induction == 1.0 / 120.0)], x='burst_size',\n",
+    "            common_norm=False, color=main_palette['tandem'], linewidth=3,\n",
+    "            legend=None, log_scale=True)\n",
+    "        plt.text(150, 1.45, \"Upstream tandem\", color=main_palette['tandem'])\n",
+    "        sns.kdeplot(data=bm_bursting_df[(bm_bursting_df.condition == 'fig.bm.sc_bursts.tandem_reporter_downstream') & (bm_bursting_df.induction == 1.0 / 120.0)], x='burst_size',\n",
+    "            common_norm=False, color=main_palette['tandem_alt'], linewidth=3,\n",
+    "            legend=None, log_scale=True)\n",
+    "        plt.text(7, 1.5, \"Downstream tandem\", color=main_palette['tandem_alt'])\n",
     "    plt.xlim([1, 3e3])\n",
     "    plt.ylim([0,1.8])\n",
     "    plt.xlabel('Burst size')\n",
