--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -5001,7 +5001,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 ('env': venv)",
+   "display_name": "Python 3.10.6 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -5014,12 +5014,11 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "pygments_lexer": "ipython3"
   },
   "vscode": {
    "interpreter": {
-    "hash": "393577709b641b15c2aa1de8cfe0868d00094c5de3ea5b0856cceab616d9a2d4"
+    "hash": "0c794e66d6a09a8111bf4a21f014578608c51cd50f61c607fe86c6d3036aead4"
    }
   }
  },
