--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -331,26 +331,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_211820/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_431909/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  base_model_df = base_model_df.append(\n",
-      "/tmp/ipykernel_211820/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_431909/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  base_model_df = base_model_df.append(\n",
-      "/tmp/ipykernel_211820/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_431909/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  base_model_df = base_model_df.append(\n",
-      "/tmp/ipykernel_211820/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_431909/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  base_model_df = base_model_df.append(\n",
-      "/tmp/ipykernel_211820/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_431909/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  base_model_df = base_model_df.append(\n",
-      "/tmp/ipykernel_211820/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  base_model_df = base_model_df.append(\n",
-      "/tmp/ipykernel_211820/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_431909/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  base_model_df = base_model_df.append(\n"
      ]
     },
@@ -359,6 +357,14 @@
      "output_type": "stream",
      "text": [
       "Loaded 4608000 total simulation runs from Parquet cached file\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_431909/466122740.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  base_model_df = base_model_df.append(\n"
      ]
     }
    ],
@@ -603,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1203,7 @@
     "#energy_ax.legend(['Unwinding only', 'Unwinding\\n+ local melting'])\n",
     "energy_ax.text(-0.18, 240, 'Unwinding only', color=main_palette['gray'], fontsize=font_sizes['data_annotation'])\n",
     "energy_ax.text(-0.18, 80, 'Unwinding and\\nlocal melting', color=main_palette['polymerase_color'], fontsize=font_sizes['data_annotation'])\n",
-    "energy_ax.set_xlabel('Supercoilng density, σ')\n",
+    "energy_ax.set_xlabel('Supercoiling density, σ')\n",
     "energy_ax.set_ylabel('Energy (pN nm)')\n",
     "energy_ax.set_xlim([-0.2,0.2])\n",
     "torque_ax.set_xlabel('Supercoiling density, σ')\n",
@@ -1301,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,13 +1341,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Figure size 670x950 with 0 Axes>"
+       "<Figure size 670x850 with 0 Axes>"
       ]
      },
      "metadata": {},
@@ -1363,7 +1369,7 @@
     "    '1st_order': main_palette['light_gray'],\n",
     "    '2nd_order': 'k'\n",
     "    }\n",
-    "fig_supp_alpha = plt.figure(figsize=(6.7,9.5))\n",
+    "fig_supp_alpha = plt.figure(figsize=(6.7,8.5))\n",
     "fig_supp_alpha_gridspec = gridspec.GridSpec(6, 2, figure=fig_supp_alpha,\n",
     "    wspace=0.1, hspace=0.15, height_ratios=[1,1.2,1,1,1,1])\n",
     "fig_supp_alpha_subfigures = {\n",
@@ -1383,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1454,7 @@
     "fig_order_compare_axes[1].set_xlabel('')\n",
     "fig_order_compare_axes[2].set_xlabel('')\n",
     "fig_order_compare_axes[3].set_xlabel('')\n",
-    "fig_supp_alpha_subfigures['A'].text(0.58,0.1, 'Fold induction', ha='center')\n",
+    "fig_supp_alpha_subfigures['A'].text(0.58,0.08, 'Fold induction', ha='center')\n",
     "\n",
     "for ax, cond, locs in zip(fig_order_compare_axes,\n",
     "        ['fig.bm.tandem_reporter_upstream', 'fig.bm.tandem_reporter_downstream','fig.bm.convergent', 'fig.bm.divergent'],\n",
@@ -1474,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
