--- a/writeups/modeling.tex
+++ b/writeups/modeling.tex
@@ -240,7 +240,7 @@ As noise impacts the properties of native and synthetic gene networks, we quanti
 \subsection{Burst dynamics vary in different models of DNA supercoiling }
 
 Transcription occurs in bursts of activity, and native and synthetic mechanisms can modify burst dynamics \parencite{desaiDNArepairPathwayCan2021,chongMechanismTranscriptionalBursting2014,poppAlteringTranscriptionFactor2021}.
-In our base model, transcriptional bursting arises from the stochastic addition of polymerases. We hypothesized that burst dynamics may explain the distribution dynamics observed in \cref{fig:output_distribution_by_orientation_dynamics,fig:noise_by_orientation}. While our base model provides a species-agnostic approach to investigate supercoiling-mediated feedback, the mechanical regulation of eukaroytic chromatin may introduce additional complexity and tunability to bursting dynamics. For example, nucleosomes can serve as a reservoir of negative supercoiling by stabilizing the wrapped double-loop of DNA \parencite{leSynergisticCoordinationChromatin2019}.
+In our base model, transcriptional bursting arises from the stochastic addition of polymerases. We hypothesized that burst dynamics may explain the distribution dynamics observed in \cref{fig:output_distribution_by_orientation_dynamics,fig:noise_by_orientation}. While our base model provides a species-agnostic approach to investigate supercoiling-mediated feedback, the mechanical regulation of eukaryotic chromatin may introduce additional complexity and tunability to bursting dynamics. For example, nucleosomes can serve as a reservoir of negative supercoiling by stabilizing the wrapped double-loop of DNA \parencite{leSynergisticCoordinationChromatin2019}.
 Furthermore, at hypernegative or hyperpositive supercoiling densities, local chromatin structure may be disrupted causing structures such as R-loops and G-quadruplexes to preferentially form. These structures can block polymerase binding and motion \parencite{stolzInterplayDNASequence2019}.
 Even when including our second-order correction term as in \cref{eq:second_order_sc_initation}, our base model predicts favorable supercoiling-dependent polymerase initiation at the hypernegative value of \(\sigma = -0.1\) (\cref{fig:perturbation_overview}). To address these complexities, we implemented two alternate models which extend our torque-response and polymerase initiation energy equations. 
 
@@ -287,10 +287,10 @@ To answer these questions, we simulate the behavior of a two-gene toggle switch 
 \begin{equation}
     r_A = r_0 \frac{K_A}{K_A + [B]^n} \qquad r_B = r_0 \frac{K_B}{K_B + [A]^n}
 \end{equation}
-for \(r_0 = 1/160 \,\text{s}^{-1}\) and \(n = 2.0\). Here, we do not explicitly model protein production. Rather, transcriptional repression directly depends on the mRNA counts of represessors. This parsimonious model allows us to understand the behavior of the system without introducing additional rate constants. We chose the half-max value \(K\)---the mRNA count at which the promoter activity is half that of \(r_0\)---to approximately match the mean steady-state value of either stable state to ensure that the toggle switch operates in the regime of maximum sensitivity (see \cref{sec:supp:choice_of_k} for details). In order to compare the behavior of the toggle switches, we initialized toggle switches of different syntaxes within one of the stable basins (gene A) and induced the second gene (gene B) after 2.8 hours (see \cref{fig:supp_toggles_run_examples} for example runs). The system then evolves under simultaneous mutual inhibition from expression of the repressors as well as from supercoiling-dependent feedback.
+for \(r_0 = 1/160 \,\text{s}^{-1}\) and \(n = 2.0\). Here, we do not explicitly model protein production. Rather, transcriptional repression directly depends on the mRNA counts of repressors. This parsimonious model allows us to understand the behavior of the system without introducing additional rate constants. We chose the half-max value \(K\)---the mRNA count at which the promoter activity is half that of \(r_0\)---to approximately match the mean steady-state value of either stable state to ensure that the toggle switch operates in the regime of maximum sensitivity (see \cref{sec:supp:choice_of_k} for details). In order to compare the behavior of the toggle switches, we initialized toggle switches of different syntaxes within one of the stable basins (gene A) and induced the second gene (gene B) after 2.8 hours (see \cref{fig:supp_toggles_run_examples} for example runs). The system then evolves under simultaneous mutual inhibition from expression of the repressors as well as from supercoiling-dependent feedback.
 
 Circuit syntax specifies unique toggle switch dynamics that can be understood by visualizing the distribution of mRNA counts over time (\cref{fig:toggle_basin_stability_over_time}). Initially, nearly all of the simulations in the ensemble lie along the axis corresponding to the initially-active gene, gene A. As time progresses, each ensemble approaches and fluctuates around an equilibrium.
-The convergent syntax approaches an equilibrium where approximately half of the population distributes into each state. In this syntax, activation of either gene causes positive supercoiling to accumulate in the intergenic region, enhancing negative feedback between genes and thus between states. With divergent syntax, the toggle distributions converge toward monostablity with low differential expression of either gene. Accumulation of negative supercoiling between genes enhances polymerase loading, weakening negative feedback. Finally, the vast majority of the simulations in the tandem syntax remain in or transition to the upstream-active state, demonstrating upstream dominance. We find that these results qualitatively hold for varying values of \(n\), the repressor cooperativity coefficient (\cref{fig:supp:toggles_hill_n_sweep}). We find that  even in the absence of cooperativity, \(n = 1.0\), the convergent syntax shows some level of bistability (\cref{fig:supp:n1_toggle_distributions}), indicating that supercoiling-mediated feedback introduces a degree of nonlinearity that can reinforce toggle switch function. 
+The convergent syntax approaches an equilibrium where approximately half of the population distributes into each state. In this syntax, activation of either gene causes positive supercoiling to accumulate in the intergenic region, enhancing negative feedback between genes and thus between states. With divergent syntax, the toggle distributions converge toward monostability with low differential expression of either gene. Accumulation of negative supercoiling between genes enhances polymerase loading, weakening negative feedback. Finally, the vast majority of the simulations in the tandem syntax remain in or transition to the upstream-active state, demonstrating upstream dominance. We find that these results qualitatively hold for varying values of \(n\), the repressor cooperativity coefficient (\cref{fig:supp:toggles_hill_n_sweep}). We find that  even in the absence of cooperativity, \(n = 1.0\), the convergent syntax shows some level of bistability (\cref{fig:supp:n1_toggle_distributions}), indicating that supercoiling-mediated feedback introduces a degree of nonlinearity that can reinforce toggle switch function. 
 
 To quantify these distribution results, we computed the \emph{stable fraction} of the ensemble, defined as the fraction of simulations that have never left the initial starting basin at a certain simulation time.
 The stable fraction monotonically decreases toward zero with time, as simulations that cross into the other stable basin are no longer counted as stable even if they return to the original basin.
@@ -357,7 +357,7 @@ In this work, we developed a model of supercoiling-mediated feedback that captur
 %[First sentence summarizes fig 3 and 4 then goes into supporting detail; need to discuss fit with existing literature modeling and/or relevant experimental systems]
 We find that induction of neighboring genes significantly influences the transcriptional activity of both genes (\cref{fig:top:orientation_bc_behavior}). Syntax-specific differences in DNA supercoiling dynamics, expression profiles, and noise emerge due to physical coupling. We find that such a system regulated by this biophysical coupling is responsive to expression level changes in adjacent genes, with both mean expression and population variance changing as a function of gene orientation (\cref{fig:top:single_cell_behavior}). The observed supercoiling-mediated feedback is itself dependent on inter-gene spacing, mRNA degradation rate, and other variables tunable in an experimental setting. Generally, accumulated negative supercoiling leads to correlated bursting, which occurs concomitant to a decrease in intrinsic noise. In contrast, accumulated positive supercoiling can lead to anti-correlated bursting, which instead enhances intrinsic noise. While the tandem syntax does not lead to large supercoiling accumulation in the intergenic region, we observe upstream dominance, where the upstream gene is more highly expressed than the downstream gene.
 
-Our prediction of burst dynamics (\cref{fig:top:bursts}) complements theoretical and experimental investigations of cooperative interactions of RNA polymerases arising from the beneficial cancellation of positive and negative supercoiling generated by adjacent polymerases \parencite{sevierCollectivePolymeraseDynamics2022,kimLongDistanceCooperativeAntagonistic2019}. We predict that syntax causes a two- to three-fold change in burst size (\cref{fig:burst_size_dynamics}), but can shift inter-burst time by an order of magnitude (\cref{fig:interburst_time_dynamics}). In addition, the syntax-specific trends in inter-burst time are not strongly affected by other potential mechanical regulators of eukaroytic chromatin---nucleosomes and strained structures such as R-loops---suggesting that syntax may robustly control gene expression through differences in burst dynamics.
+Our prediction of burst dynamics (\cref{fig:top:bursts}) complements theoretical and experimental investigations of cooperative interactions of RNA polymerases arising from the beneficial cancellation of positive and negative supercoiling generated by adjacent polymerases \parencite{sevierCollectivePolymeraseDynamics2022,kimLongDistanceCooperativeAntagonistic2019}. We predict that syntax causes a two- to three-fold change in burst size (\cref{fig:burst_size_dynamics}), but can shift inter-burst time by an order of magnitude (\cref{fig:interburst_time_dynamics}). In addition, the syntax-specific trends in inter-burst time are not strongly affected by other potential mechanical regulators of eukaryotic chromatin---nucleosomes and strained structures such as R-loops---suggesting that syntax may robustly control gene expression through differences in burst dynamics.
 While we do not directly examine transcription elongation rates, we similarly predict syntax-specific differences in expression dynamics, but observe distinct syntax-specific behaviors in our model \parencite{sevierCollectivePolymeraseDynamics2022,tripathiDNASupercoilingmediatedCollective2021}.  We also find that intergenic distance only weakly affects supercoiling feedback \parencite{tripathiDNASupercoilingmediatedCollective2021}.
  In alignment with experimental work, we find that  positive supercoiling accumulates in the intergenic region of convergently-oriented native genes \parencite{guoHighresolutionGenomewideMapping2021}. When combined with sequencing methods that precisely measure nascent mRNA transcription \parencite{mellorInterleavedGenome2016}, these methods may provide a window into experimental systems in order to test theoretical predictions of our work and others.
 
@@ -608,7 +608,7 @@ Gene-paired & 0, 34393 & 12422\(\rightarrow\)6017 & 24529\(\rightarrow\)25844 \\
 \end{table}
 
 \FloatBarrier
-\subsection{Acknowledgements}
+\subsection{Acknowledgments}
 Research reported in this manuscript was supported by National Institute of General Medical Sciences of the National Institutes of Health under award number R35-GM143033. The authors acknowledge the MIT SuperCloud and Lincoln Laboratory Supercomputing Center \parencite{reutherInteractiveSupercomputing402018} for providing HPC resources that have contributed to the research results reported within this paper. We also thank Adam Beitz, Patrick Han,  Ross Jones, Sneha Kabaria, Brittany Lende, Kasey Love, Christian Otero, Emma Peterman, Jack Suggs, and Nathan Wang for helpful suggestions throughout and for their effort in editing this manuscript.
 
 \subsubsection{Author contributions}
@@ -934,7 +934,7 @@ Reflecting on the desired properties of a model based on literature observations
 \subsubsection{Literature observations and modeling goals}
 A naked DNA bead experiment (\textcite{revyakinPromoterUnwindingPromoter2004}) found that positive and negative supercoiling affected RNAP polymerase binding rates, with negative supercoiling encouraging binding and positive supercoiling discouraging binding. When a polymerase bound, approximately 1.2 turns of DNA unwound (13 base pairs, or 4.42nm). For a typical bacterial promoter, RNAP binding occurred reversibly. The mean time between RNAP binding events was measured and related to a kinetic model. The mean time between binding events defines a promoter-on rate. Once the DNA torque reaches the constant-torque regime, the promoter-on rate becomes constant.
 
-Ideally, our model would replicate these results, with negative supercoiling promoting RNAP binding and negative supercoiling inhibiting RNAP binding, but would only depend on the local supercoiling density. Successful phenomenological models such as \textcite{elhoudaiguiBacterialGenomeArchitecture2019a} often use sigmodial curves that are most sensitive in the range from \(\sigma = -0.1\) to \(\sigma = 0.1\); ideally, our model would be sensitive in a similar regime.
+Ideally, our model would replicate these results, with negative supercoiling promoting RNAP binding and negative supercoiling inhibiting RNAP binding, but would only depend on the local supercoiling density. Successful phenomenological models such as \textcite{elhoudaiguiBacterialGenomeArchitecture2019a} often use sigmoidal curves that are most sensitive in the range from \(\sigma = -0.1\) to \(\sigma = 0.1\); ideally, our model would be sensitive in a similar regime.
 
 \FloatBarrier
 \subsubsection{Dual linking number constraint model}
